--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -2,6 +2,15 @@
 == SourceBuddy Release history
 
 
+=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.0.0[2.0.0]
+
+Major restructuring of the class loading structure.
+With this release hidden and non-hidden classes can be mixed.
+There is no more `loadHidden()` method supported.
+Instead, you can call `hidden()` for each added source separately.
+
+Since this change, removing a method from the API? is not backward compatible, this is a new major version.
+
 === link:https://github.com/sourcebuddy/sourcebuddy/tree/1.1.1[1.1.1]
 
 Fix to cache some resources.
