--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -2,6 +2,12 @@
 == SourceBuddy Release history
 
 
+=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.1.0-SNAPSHOT[2.1.0-SNAPSHOT]
+
+The individual classes can be each hidden or named (not hidden).
+Named classes can also be loaded using lookup object.
+Class can be denoted as nesting class mimicking already existing class.
+
 === link:https://github.com/sourcebuddy/sourcebuddy/tree/2.0.0[2.0.0]
 
 Major restructuring of the class loading structure.
