--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@
 
 
 == Introduction
-.This documentation is about the version 2.2.0-SNAPSHOT of the software.
+.This documentation is about the version 2.2.0 of the software.
 
 SourceBuddy is a Java library you can use to compile and load dynamically generated Java source code in your program.
 
@@ -83,7 +83,7 @@ The Maven central coordinates are:
 <dependency>
     <groupId>com.javax0.sourcebuddy</groupId>
     <artifactId>SourceBuddy</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
 </dependency>
 ----
 
