--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -2,7 +2,7 @@
 == SourceBuddy Release history
 
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.2.1-SNAPSHOT[2.2.1-SNAPSHOT]
+=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.0[2.3.0]
 
 Adding support for Java 20.
 
