--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -2,6 +2,10 @@
 == SourceBuddy Release history
 
 
+=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.1-SNAPSHOT[2.3.1-SNAPSHOT]
+
+The next bugfix release.
+
 === link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.0[2.3.0]
 
 Adding support for Java 20.
